Reverted kivymd to avoid shader crash on Android

--- a/sbapp/kivymd/uix/dropdownitem/dropdownitem.kv
+++ b/sbapp/kivymd/uix/dropdownitem/dropdownitem.kv
@@ -1,7 +1,7 @@
 <_Triangle>:
     canvas:
         Color:
-            rgba: app.theme_cls.text_color
+            rgba: root.theme_cls.text_color
         Triangle:
             points:
                 [ \
@@ -13,8 +13,7 @@
 
 <MDDropDownItem>
     orientation: "vertical"
-    size_hint: None, None
-    size: self.minimum_size
+    adaptive_size: True
     spacing: "5dp"
     padding: "5dp", "5dp", "5dp", 0
 
