--- a/sbapp/kivymd/uix/button/button.kv
+++ b/sbapp/kivymd/uix/button/button.kv
@@ -3,9 +3,9 @@
         Clear
         Color:
             rgba:
-                self._md_bg_color \
+                (self._md_bg_color or [0.0, 0.0, 0.0, 0.0]) \
                 if not self.disabled else \
-                self._md_bg_color_disabled
+                (self._md_bg_color_disabled or [0.0, 0.0, 0.0, 0.0])
         RoundedRectangle:
             size: self.size
             pos: self.pos
@@ -13,17 +13,19 @@
             radius: [root._radius, ]
         Color:
             rgba:
-                root._line_color \
+                root._line_color or [0.0, 0.0, 0.0, 0.0] \
                 if not root.disabled else \
-                (root._line_color_disabled or self._disabled_color)
+                ( \
+                root._line_color_disabled \
+                or self._disabled_color \
+                or [0.0, 0.0, 0.0, 0.0] \
+                )
         Line:
             width: root.line_width
             rounded_rectangle:
-                ( \
-                self.x, self.y, self.width, self.height, \
+                (self.x, self.y, self.width, self.height, \
                 root._radius, root._radius, root._radius, root._radius, \
-                self.height \
-                )
+                self.height)
 
     size_hint: None, None
     anchor_x: root.halign
@@ -31,28 +33,21 @@
     _round_rad: [self._radius] * 4
 
 
+
 <ButtonContentsText>
     lbl_txt: lbl_txt
     width:
-        max( \
-        root._min_width, \
-        root.padding[0] + lbl_txt.texture_size[0] + root.padding[2] \
-        )
+        max(root._min_width, \
+        root.padding[0] + lbl_txt.texture_size[0] + root.padding[2])
     size_hint_min_x:
-        max( \
-        root._min_width, \
-        root.padding[0] + lbl_txt.texture_size[0] + root.padding[2] \
-        )
+        max(root._min_width, \
+        root.padding[0] + lbl_txt.texture_size[0] + root.padding[2])
     height:
-        max( \
-        root._min_height, \
-        root.padding[1] + lbl_txt.texture_size[1] + root.padding[3] \
-        )
+        max(root._min_height, \
+        root.padding[1] + lbl_txt.texture_size[1] + root.padding[3])
     size_hint_min_y:
-        max( \
-        root._min_height, \
-        root.padding[1] + lbl_txt.texture_size[1] + root.padding[3] \
-        )
+        max(root._min_height, \
+        root.padding[1] + lbl_txt.texture_size[1] + root.padding[3])
 
     MDLabel:
         id: lbl_txt
@@ -89,10 +84,7 @@
             #  This is only a temporary fix and does not fix the cause of the error.
             (root._icon_color if root._icon_color else root.theme_cls.text_color) \
             if not root.disabled else \
-            root.theme_cls.disabled_hint_text_color \
-            if not root.disabled_color else \
-            root.disabled_color
-
+            root.theme_cls.disabled_hint_text_color
         on_icon:
             if self.icon not in md_icons.keys(): self.size_hint = (1, 1)
         theme_text_color: root._theme_icon_color
@@ -139,7 +131,7 @@
         id: box
         adaptive_size: True
         padding: 0
-        spacing: "8dp"
+        spacing: "4dp"
 
         MDIcon:
             id: lbl_ic
@@ -201,21 +193,48 @@
             radius: [self.height / 2]
 
 
-<MDFloatingRootButton>
+<BaseFloatingRootButton>
     theme_text_color: "Custom"
     md_bg_color: self.theme_cls.primary_color
 
-
-<MDFloatingLabel>
-    padding_x: "8dp"
-    padding_y: "8dp"
-    adaptive_size: True
-    theme_text_color: "Custom"
-
     canvas.before:
+        PushMatrix
+        Rotate:
+            angle: self._angle
+            axis: (0, 0, 1)
+            origin: self.center
+    canvas.after:
+        PopMatrix
+
+
+# FIXME: Use :class:`~kivymd.uix.boxlayout.MDBoxLayout` instead
+#  :class:`~kivy.uix.boxlayout.BoxLayout`.
+<BaseFloatingLabel>
+    size_hint: None, None
+    padding: "8dp", "4dp", "8dp", "4dp"
+    height: label.texture_size[1] + self.padding[1] * 2
+    width: label.texture_size[0] + self.padding[0] * 2
+    elevation: 10
+
+    # TODO: Use `md_bg_color` and `radius` instead `canvasю
+    canvas:
         Color:
-            rgba: self.bg_color
+            rgba:
+                self.theme_cls.primary_color \
+                if not root.bg_color else \
+                root.bg_color
         RoundedRectangle:
-            size: self.size
             pos: self.pos
-            radius: self.radius
+            size: self.size
+            radius: [5]
+
+    Label:
+        id: label
+        markup: True
+        text: root.text
+        size_hint: None, None
+        size: self.texture_size
+        color:
+            root.theme_cls.text_color \
+            if not root.text_color else \
+            root.text_color
