--- a/sbapp/kivymd/uix/card/card.kv
+++ b/sbapp/kivymd/uix/card/card.kv
@@ -2,6 +2,17 @@
     md_bg_color: app.theme_cls.divider_color
 
 
+<MDCard>
+    canvas.before:
+        Color:
+            rgba: self.md_bg_color
+        RoundedRectangle:
+            size: self.size
+            pos: self.pos
+            radius: root.radius
+            source: root.background
+
+
 <MDSeparator>
     md_bg_color:
         self.theme_cls.divider_color \
