--- a/sbapp/kivymd/uix/datatables/datatables.kv
+++ b/sbapp/kivymd/uix/datatables/datatables.kv
@@ -1,4 +1,5 @@
 #:import DEVICE_TYPE kivymd.material_resources.DEVICE_TYPE
+#:import FakeRectangularElevationBehavior kivymd.uix.behaviors.FakeRectangularElevationBehavior
 
 
 <CellRow>
@@ -65,7 +66,7 @@
     size_hint_y: None
     height: self.minimum_height
     spacing: "4dp"
-    tooltip_text: root.tooltip if root.tooltip else root.text
+    tooltip_text: root.text
 
     BoxLayout:
         id: box
@@ -174,11 +175,7 @@
         font_size: "14sp"
         on_release: root.table_data.open_pagination_menu()
         text:
-            "{}".format( \
-            root.table_data.rows_num \
-            if root.table_data.rows_num < len(root.table_data.row_data) else \
-            len(root.table_data.row_data) \
-            )
+            f"{root.table_data.rows_num if root.table_data.rows_num < len(root.table_data.row_data) else len(root.table_data.row_data)}"
 
     Widget:
         size_hint_x: None
@@ -195,11 +192,9 @@
             if root.theme_cls.theme_style == "Dark" else \
             (0, 0, 0, 1)
         text:
-            "1-{} of {}".format( \
-            root.table_data.rows_num \
-            if root.table_data.rows_num > len(root.table_data.row_data) else \
-            len(root.table_data.row_data), len(root.table_data.row_data) \
-            )
+            f"1-" \
+            f"{root.table_data.rows_num if root.table_data.rows_num > len(root.table_data.row_data) else len(root.table_data.row_data)} " \
+            f"of {len(root.table_data.row_data)}"
 
     MDIconButton:
         id: button_back
@@ -222,7 +217,7 @@
         on_release: root.table_data.set_next_row_data_parts("forward")
 
 
-<TableContainer@MDCard>
+<TableContainer@MDCard+FakeRectangularElevationBehavior>
 
 
 <MDDataTable>
