--- a/sbapp/kivymd/uix/dialog/dialog.kv
+++ b/sbapp/kivymd/uix/dialog/dialog.kv
@@ -18,11 +18,7 @@
         PopMatrix
 
 
-<DialogContainer@MDCard>
-    shadow_color: 0.0, 0.0, 0.0, 0.0
-    elevation: 0
-    shadow_softness: 0
-    shadow_offset: 0, 0
+<DialogContainer@MDCard+FakeRectangularElevationBehavior>
 
 
 <MDDialog>
@@ -32,6 +28,7 @@
         orientation: "vertical"
         size_hint_y: None
         height: self.minimum_height
+        elevation: 24
         padding: "24dp", "24dp", "8dp", "8dp"
         radius: root.radius
         md_bg_color:
